--- a/css/component.css
+++ b/css/component.css
@@ -40,7 +40,7 @@
   padding: 0 15px;
 }*/
 .container {
-  border: 1px solid #999;
+  /*border: 1px solid #999;*/
   margin-right: auto;
   margin-left: auto;
   padding-left: 15px;
@@ -236,7 +236,7 @@ a:focus {
     line-height: 24px;
     padding:12px 32px;
 }
-/* menu toggle*/
+/* menu toggle */
 .menu-toggle{
     height: 48px;
     width: 48px;
@@ -252,15 +252,70 @@ a:focus {
     margin-bottom: 7px; 
     border-radius: 2px;
 }
-/* responsive-popup*/
 @media(max-width:800px){
    .menu-toggle{
     display: block;
    }
+}
+/* responsive-popup-menu */
+@media(max-width:800px){
     .responsive-popup{
         display: none;
+        position: fixed;
+        top:0;
+        left: 0;
+        width: 100%;
+        height:100vh;
+        background-color: #EEEEEE;
+        z-index: 1010;
+        /*border: solid 2px #4444;*/
+    }
+    #popup-menu:target{
+        display: block;
+
+    }
+
+/* resposive-popup-menu-li */
+    .menu.responsive-popup> li{
+        float: none;
+        /*border: solid 1px #444;*/
+    }
+    .menu.responsive-popup .menu__item{
+        text-align: center;
+        margin-top: 7.5vh;
+        /*border: solid 1px #444;*/
+
+    }
+/* popup-menu__close */
+    .popup-menu__close{
+    padding: 6px;
+    height: 48px;
+    width: 48px;
+    /*border: solid 1px #444;*/
+    /*display: block;*/
+    position: absolute;
+    top: 0;
+    right: 0;
+    /*background-color: #fff;*/
+    }
+    .popup-menu__close span{
+        display: block;
+        width: 33.93px;
+        height: 5px;
+        border-radius: 2px;
+        background-color: #6C6C6C;
+        top:50%;
+    }
+    .popup-menu__close span:nth-child(1){
+        transform: rotate(45deg);
+    }
+    .popup-menu__close span:nth-child(2){
+        transform: translate(0,-100%) rotate(-45deg);
     }
 }
+
+
+/*responsive-pop-menu__close*/
 
 /*navbar*/
 .navbar{
