--- a/css/component.css
+++ b/css/component.css
@@ -255,6 +255,7 @@ a:focus {
 /*.navbar .elements{
     height:48px;
 }*/
+
  /* logo */
 .logo{
     margin:0;
@@ -269,16 +270,25 @@ a:focus {
     font-size: 24px;
     line-height: 36px;
     padding:6px 12px;
+    font-weight: 800;
+    top:50%;
 /*    margin-bottom: 6px;
     margin-top:6px :  */
 }
 .logo__image{
-    height:48px;
-    width: 48px;
+    margin: 6px 0;
+    height:36px;
+    width: 36px;
     display: inline-block; 
-    background-color: #4444;
-    border-radius: 24px;
+    background-color: #2368b2;
+    border-radius: 18px;
 }
+@media(max-width:500px){
+ .logo__title{
+    font-size: 22px;
+ }
+}
+
 /* menu */
 .menu{
     list-style-type: none;
@@ -329,7 +339,7 @@ a:focus {
         height:100vh;
         background-color: #EEEEEE;
         z-index: 1010;
-        /*border: solid 2px #4444;*/
+        /*border: solid 2px #4444; */
     }
     #popup-menu:target{
         display: block;
@@ -342,11 +352,19 @@ a:focus {
         /*border: solid 1px #444;*/
     }
     .menu.responsive-popup .menu__item{
+        font-size: 20px;
+        line-height: 20px;
         text-align: center;
         margin-top: 7.5vh;
+        padding: 5vh 0; 
         /*border: solid 1px #444;*/
 
     }
+    .menu.responsive-popup .menu__item:hover{
+        color: #fff;
+        background-color: #2368b2;
+    }
+
 /* popup-menu__close */
     .popup-menu__close{
     padding: 6px;
@@ -364,7 +382,7 @@ a:focus {
         width: 33.93px;
         height: 5px;
         border-radius: 2px;
-        background-color: #6C6C6C;
+        background-color: #26323f;
         top:50%;
     }
     .popup-menu__close span:nth-child(1){
@@ -395,7 +413,7 @@ a:focus {
    .welcome-text{
     line-height: 30px;
     font-size: 30px;
-    font-weight: 800;
+    font-weight: 700;
     /*color: #fff;*/
    }
 }
@@ -403,6 +421,13 @@ a:focus {
 /*-------------------------*/
 /* Section
 ---------------------------*/
+.contentbox{
+    border-radius: 2px;
+    -webkit-box-shadow: 3px 3px 10px 1px rgba(194,194,194,1);
+    -moz-box-shadow: 3px 3px 10px 1px rgba(194,194,194,1);
+    box-shadow: 3px 3px 10px 1px rgba(194,194,194,1);
+
+}
 /*-------------------------*/
 /* Call Button
 ---------------------------*/
